Archive2/c7/8ff1c11be7dfd1/output
main.cpp:5:18: error: assigning to 'int **' from incompatible type 'int *(*)[10][2]'
    mulePosition = new int *[boardSize][boardSize][2];
                 ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
