Archive2/c7/8ff1c11be7dfd1/main.cpp
int main()
{
    int const boardSize = 10;
    int** mulePosition;
    mulePosition = new int *[boardSize][boardSize][2];
}